[tool.poetry]
name = "GatorMiner"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
matplotlib = "^3.4.1"
sklearn = "^0.0"
requests = "^2.25.1"
commonmark = "^0.9.1"
codecov = "^2.1.11"
altair = "^4.1.0"
textblob = "^0.15.3"
scipy = "^1.6.2"
pylint = "^2.7.4"
importlib-metadata = "^3.10.0"
gensim = "^3.8.3"
streamlit = "^0.78.0"
spacy = "^2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.9.0"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
