[tool.poetry]
name = "gatorminer"
version = "0.1.0"
description = ""
authors = ["enpuyou <youe2@allegheny.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "*"
gensim = "~=3.8.3"
spacy = "~=2.3"
sklearn = "*"
pytest = "*"
requests = "*"
commonmark = "*"
codecov = "*"
streamlit = "~=0.78.0"
altair = "*"
textblob = "*"
scipy = "*"
pylint = "*"
importlib-metadata = "*"
atomicwrites = "*"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "*"
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
